--- a/image/assets/lang/lang_en.json
+++ b/image/assets/lang/lang_en.json
@@ -91,6 +91,32 @@
     "app_calendar_reminder_2_days_before": "2 days before",
     "app_calendar_reminder_1_week_before": "1 week before",
     "app_calendar_custom_repeat_title": "Custom repeat",
+    "app_calendar_new_event_title": "New event",
+    "app_calendar_edit_event_title": "Edit event",
+    "app_calendar_edit": "EDIT",
+    "app_calendar_check": "CHECK",
+    "app_calendar_uncheck": "UNCHECK",
+    "app_calendar_new_edit_event_name": "Event name",
+    "app_calendar_new_edit_event_allday": "All day event",
+    "app_calendar_new_edit_event_start": "Start",
+    "app_calendar_new_edit_event_end": "End",
+    "app_calendar_repeat_never": "Never",
+    "app_calendar_repeat_daily": "Daily",
+    "app_calendar_repeat_weekly": "Weekly",
+    "app_calendar_repeat_two_weeks": "Two weeks",
+    "app_calendar_repeat_month": "Month",
+    "app_calendar_repeat_year": "Year",
+    "app_calendar_repeat_custom": "Custom",
+    "app_calendar_reminder_never": "Never",
+    "app_calendar_reminder_event_time": "At the time of the event",
+    "app_calendar_reminder_5_min_before": "5 mins before",
+    "app_calendar_reminder_15_min_before": "15 mins before",
+    "app_calendar_reminder_30_min_before": "30 mins before",
+    "app_calendar_reminder_1_hour_before": "1h before",
+    "app_calendar_reminder_2_hour_before": "2h before",
+    "app_calendar_reminder_1_day_before": "1 day before",
+    "app_calendar_reminder_2_days_before": "2 days before",
+    "app_calendar_reminder_1_week_before": "1 week before",
 
     "app_options_invalid_option": " <Invalid Option> ",
     "app_options_contact_details": "Contact details",
