--- a/image/assets/lang/lang_sp.json
+++ b/image/assets/lang/lang_sp.json
@@ -77,6 +77,7 @@
     "app_desktop_pin_info2": "Allowed unlock attempts",
     "app_desktop_pin_blocked1": "Sorry, phone blocked",
     "app_desktop_unread_messages": "unread messages",
+    "app_desktop_unread_calendar_events": "calendar events",
     "app_desktop_missed_calls": "missed calls",
     "app_desktop_menu_phone": "PHONE",
     "app_desktop_menu_contacts": "CONTACTS",
