--- a/image/assets/lang/lang_en.json
+++ b/image/assets/lang/lang_en.json
@@ -137,6 +137,7 @@
     "app_desktop_pin_info2": "Allowed unlock attempts",
     "app_desktop_pin_blocked1": "Sorry, phone blocked",
     "app_desktop_unread_messages": "Unread messages",
+    "app_desktop_unread_calendar_events": "Calendar events",
     "app_desktop_missed_calls": "Missed calls",
     "app_desktop_menu_phone": "PHONE",
     "app_desktop_menu_contacts": "CONTACTS",
