--- a/image/assets/lang/lang_en.json
+++ b/image/assets/lang/lang_en.json
@@ -58,6 +58,8 @@
     "locale_24hour_min" : "%H:%M",
     "locale_date_full" : "%m/%d/%y",
     "locale_date_short" : "%d/%m",
+    "common_AM" : "AM",
+    "common_PM" : "PM",
 
     "duration_min_0sec" : "%M:%0S",
     "duration_0min_0sec" : "%0M:%0S",
