[EDG-3790]: Add display and keypad settings window

--- a/image/assets/lang/lang_en.json
+++ b/image/assets/lang/lang_en.json
@@ -206,7 +206,12 @@
 	"app_settings_title_year": "Year",
 	"app_settings_title_time": "Time",
     "app_settings_cellular_passthrough": "Cellular <-> USB",
-    "app_settings_display": "Display",
+    "app_settings_display": "Display And Keypad",
+        "app_settings_display_display_light": "Display light",
+        "app_settings_display_font_size": "Font size",
+        "app_settings_display_locked_screen": "Locked screen",
+        "app_settings_display_keypad_light": "Keypad light",
+        "app_settings_display_input_language": "Input language",
     "app_settings_phone_modes": "Phone Modes",
     "app_settings_security": "Security",
     "app_settings_language": "Language",
