--- a/image/assets/lang/lang_pl.json
+++ b/image/assets/lang/lang_pl.json
@@ -118,7 +118,12 @@
 		"app_settings_title_year": "Rok",
 		"app_settings_title_time": "Czas",
     "app_settings_cellular_passthrough": "Modem <-> USB",
-    "app_settings_display": "Ekran",
+    "app_settings_display": "Ekran oraz klawiatura",
+        "app_settings_display_display_light": "Display light",
+        "app_settings_display_font_size": "Font size",
+        "app_settings_display_locked_screen": "Locked screen",
+        "app_settings_display_keypad_light": "Keypad light",
+        "app_settings_display_input_language": "Input language",
     "app_settings_phone_modes": "Tryby Pracy",
     "app_settings_security": "Bezpieczeństwo",
     "app_settings_language": "Język",
