--- a/image/assets/lang/lang_en.json
+++ b/image/assets/lang/lang_en.json
@@ -53,6 +53,7 @@
     "common_november": "November",
     "common_december": "December",
     "common_yesterday" : "Yesterday",
+    "common_today" : "Today",
     "common_results_prefix": "Results: ",
     "common_search": "SEARCH",
 
