--- a/image/assets/lang/lang_pl.json
+++ b/image/assets/lang/lang_pl.json
@@ -41,6 +41,7 @@
     "common_november": "listopada",
     "common_december": "grudnia",
     "common_yesterday" : "wczoraj",
+    "common_today" : "dzisiaj",
     "locale_12hour_min" : "%I:%M",
     "locale_24hour_min" : "%H:%M",
     "locale_date_full" : "%d.%m.%y",
