[EGD-4788] Add custom repeat window for the alarm application
When choosing alarm repeat option now it is
possible to choose specific days of the week
and their combinations.

--- a/image/assets/lang/English.json
+++ b/image/assets/lang/English.json
@@ -35,6 +35,13 @@
   "common_fr": "FR",
   "common_sa": "SA",
   "common_su": "SU",
+  "common_mon": "Mon",
+  "common_tue": "Tue",
+  "common_wed": "Wed",
+  "common_thu": "Thu",
+  "common_fri": "Fri",
+  "common_sat": "Sat",
+  "common_sun": "Sun",
   "common_monday": "Monday",
   "common_tuesday": "Tuesday",
   "common_wednesday": "Wednesday",
