[EGD-4898] Add GUI for Custom MMI messages- call forwarding
Visitor framework for displaing MMI messages.
GUI for call forwarding custom messages.

--- a/image/assets/lang/English.json
+++ b/image/assets/lang/English.json
@@ -183,6 +183,23 @@
   "app_desktop_menu": "MENU",
   "app_desktop_emergency": "SOS",
   "app_desktop_info": "Info",
+  "app_desktop_info_mmi_none_specified_failed": "Operation failed",
+  "app_desktop_info_mmi_none_specified_success": "Operation successful",
+  "app_desktop_info_mmi_common_failed": "failed",
+  "app_desktop_info_mmi_common_no" :"not",
+  "app_desktop_info_mmi_registration_failed": "Registration failed",
+  "app_desktop_info_mmi_registration_success": "Registration was successful",
+  "app_desktop_info_mmi_erasure_failed": "Erasure failed",
+  "app_desktop_info_mmi_erasure_success": "Erasure was successful",
+  "app_desktop_info_mmi_disabling_failed": "Service disabling failed",
+  "app_desktop_info_mmi_disabling_success": "Service has been disabled",
+  "app_desktop_info_mmi_enabling_failed": "Service enabling failed",
+  "app_desktop_info_mmi_enabling_success": "Service has been enabled",
+  "app_desktop_info_mmi_voice": "voice",
+  "app_desktop_info_mmi_fax": "FAX",
+  "app_desktop_info_mmi_sync": "sync",
+  "app_desktop_info_mmi_async": "async",
+  "app_desktop_info_mmi_call_forwarding" : "Call forwarding",
   "app_desktop_info_mmi_result_success": "Success",
   "app_desktop_info_mmi_result_failed": "Failed",
   "app_desktop_header_sim_setup": "<text><token>$SIM</token> setup</text>",
