[EGD-5033] Fix missing texts for ApplicationDesktop
 *Screen and Sim lock windows missing texts added

--- a/image/assets/lang/English.json
+++ b/image/assets/lang/English.json
@@ -185,29 +185,25 @@
   "app_desktop_info": "Info",
   "app_desktop_info_mmi_result_success": "Success",
   "app_desktop_info_mmi_result_failed": "Failed",
-  "app_desktop_screen_enter_passcode": "Enter passcode",
-  "app_desktop_screen_wrong_pin": "Wrong passcode",
-  "app_desktop_screen_allowed_attempts": "Allowed unlock attempts",
+  "app_desktop_header_sim_setup": "<text><token>$SIM</token> setup</text>",
+  "app_desktop_sim_enter_pin_unlock": "Type current PIN code:",
+  "app_desktop_sim_enter_new_pin": "Enter new PIN code:",
+  "app_desktop_sim_confirm_new_pin": "Confirm new PIN code:",
+  "app_desktop_sim_setup_wrong_pin_last_attempt": "<text>Wrong PIN code. You have<br></br>1 attempt left.</text>",
+  "app_desktop_sim_setup_wrong_pin": "<text>Wrong PIN code. You have<br></br><token>$ATTEMPTS</token> attempts left.</text>",
+  "app_desktop_sim_wrong_pin_confirmation": "Wrong PIN code.",
+  "app_desktop_sim_cme_error": "<text>SIM card<br></br>CME error:<token>$CMECODE</token></text>",
+  "app_desktop_sim_puk_blocked": "<text>The SIM card is blocked.<br></br>Please, contact the operator.</text>",
+  "app_desktop_sim_setup_enter_puk": "<text>The SIM card is blocked.<br></br>To unblock it, type the PUK code:</text>",
+  "app_desktop_sim_setup_wrong_puk": "<text>Wrong PUK code.<br></br>You have <token>$ATTEMPTS</token> attempts left</text>",
+  "app_desktop_sim_setup_wrong_puk_last_attempt": "<text>Wrong PUK code.<br></br>You have 1 attempt left</text>",
+  "app_desktop_sim_setup_wrong_puk_last_attempt_warning": "<text>If the code is wrong this time, the<br></br>SIM card will be blocked and you'll<br></br>have to contact the operator.</text>",
+  "app_desktop_screen_enter_passcode_to_unlock": "<text>Enter the passcode<br></br>to unlock:</text>",
+  "app_desktop_screen_wrong_passcode_last_attempt": "<text>Wrong passcode.<br></br>You have 1 attempt left.</text>",
+  "app_desktop_screen_wrong_passcode_last_attempt_warning": "<text>If the passcode is wrong this time,<br></br>you'll have to wait <token>$MINUTES</token> minutes<br></br>before trying again.</text>",
+  "app_desktop_screen_wrong_passcode": "<text>Wrong passcode.<br></br>You have <token>$ATTEMPTS</token> attempts left.</text>",
   "app_desktop_screen_blocked_info": "Sorry, phone blocked",
-  "app_desktop_sim_to_unlock": "To unlock the",
-  "app_desktop_sim_card": "card",
-  "app_desktop_sim_type_pin": "please type a PIN code:",
-  "app_desktop_sim_blocked": "The SIM card is blocked.",
-  "app_desktop_sim_enter_pin": "Enter new PIN code",
-  "app_desktop_sim_confirm_pin": "Enter new PIN code",
-  "app_desktop_sim_type_puk": "To unblock it, type the PUK code:",
   "app_desktop_press_to_unlock": "<text>Press <b>Unlock</b> and then <b>#</b></text>",
-  "app_desktop_sim_wrong_pin": "Wrong PIN code",
-  "app_desktop_sim_wrong_puk": "Wrong PUK code",
-  "app_desktop_sim_you_have": "You have",
-  "app_desktop_sim_attempt_left_plural": "attempts left",
-  "app_desktop_sim_attempt_left_singular": "attempt left",
-  "app_desktop_sim_warning1": "If the code is wrong this time, the",
-  "app_desktop_sim_warning2": "SIM card will be blocked and you'll",
-  "app_desktop_sim_warning3": "have to contact the operator",
-  "app_desktop_sim_blocked_info1": "Sorry, SIM card permanently blocked.",
-  "app_desktop_sim_blocked_info2": "Please contact your service provider",
-  "app_desktop_sim_cme_error": "<text>SIM card\nCME error:</text>",
   "app_desktop_unread_messages": "<text>Unread <b>messages</b></text>",
   "app_desktop_missed_calls": "<text>Missed <b>calls</b></text>",
   "app_desktop_menu_phone": "PHONE",
@@ -234,6 +230,7 @@
   "app_desktop_clear": "CLEAR",
   "app_desktop_clear_all": "CLEAR ALL",
   "app_desktop_replay": "REPLY",
+
   "app_call_call": "CALL",
   "app_call_clear": "CLEAR",
   "app_call_reject": "REJECT",
