[EGD-4283] Mute Option, Music Volume Window, Call Volume Window

--- a/image/assets/lang/English.json
+++ b/image/assets/lang/English.json
@@ -72,11 +72,16 @@
   "duration_0min_0sec": "%0M:%0S",
   "duration_0hmin_0sec": "%0N:%0S",
   "duration_hour_0min_0sec": "%H:%0M:%0S",
-  "brightness_text": "BRIGHTNESS",
-  "volume_text": "VOLUME",
-  "home_modes_connected": "CONNECTED",
-  "home_modes_notdisturb": "DO NOT DISTURB",
-  "home_modes_offline": "OFFLINE",
+
+  "app_popup_brightness_text": "BRIGHTNESS",
+  "app_popup_volume_text": "VOLUME",
+  "app_popup_call_volume_text": "CALL VOLUME",
+  "app_popup_music_volume_text": "MUSIC VOLUME",
+  "app_popup_home_modes_connected": "CONNECTED",
+  "app_popup_home_modes_notdisturb": "DO NOT DISTURB",
+  "app_popup_home_modes_offline": "OFFLINE",
+  "app_popup_muted_text": "MUTED",
+
   "app_alarm_clock_title_main" : "Alarm clock",
   "app_alarm_clock_repeat_never" : "Never",
   "app_alarm_clock_repeat_everyday" : "Everyday",
