--- a/image/assets/lang/English.json
+++ b/image/assets/lang/English.json
@@ -103,10 +103,10 @@
   "app_alarm_clock_sound": "Sound",
   "app_alarm_clock_snooze": "Snooze",
   "app_alarm_clock_repeat": "Repeat",
-  "app_alarm_clock_snooze_5_min": "5 min",
-  "app_alarm_clock_snooze_10_min": "10 min",
-  "app_alarm_clock_snooze_15_min": "15 min",
-  "app_alarm_clock_snooze_30_min": "30 min",
+  "app_alarm_clock_snooze_5_min": "5 mins",
+  "app_alarm_clock_snooze_10_min": "10 mins",
+  "app_alarm_clock_snooze_15_min": "15 mins",
+  "app_alarm_clock_snooze_30_min": "30 mins",
   "app_alarm_clock_play_pause": "PLAY/PAUSE",
   "app_alarm_clock_edit": "EDIT",
   "app_calendar_title_main": "Calendar",
@@ -251,7 +251,7 @@
   "app_desktop_screen_wrong_passcode_last_attempt": "<text>Wrong passcode.<br></br>You have 1 attempt left.</text>",
   "app_desktop_screen_wrong_passcode_last_attempt_warning": "<text>If the passcode is wrong this time,<br></br>you'll have to wait <token>$MINUTES</token> minutes<br></br>before trying again.</text>",
   "app_desktop_screen_wrong_passcode": "<text>Wrong passcode.<br></br>You have <token>$ATTEMPTS</token> attempts left.</text>",
-  "app_desktop_screen_blocked_info": "Sorry, phone blocked",
+  "app_desktop_screen_blocked_info": "Sorry, the phone is locked",
   "app_desktop_press_to_unlock": "<text>Press <b>Unlock</b> and then <b>#</b></text>",
   "app_desktop_unread_messages": "<text>Unread <b>messages</b></text>",
   "app_desktop_low_battery_notification": "<text>low battery level - GSM off</text>",
@@ -264,8 +264,8 @@
   "app_desktop_menu_meditation": "MEDITATION",
   "app_desktop_menu_music": "MUSIC",
   "app_desktop_menu_tools": "TOOLS",
-  "app_desktop_menu_settings_new": "SETTINGS NEW",
-  "app_desktop_menu_settings": "SETTINGS",
+  "app_desktop_menu_settings_new": "SETTINGS",
+  "app_desktop_menu_settings": "ADVANCED",
   "app_desktop_menu_phonebook": "PHONEBOOK",
   "app_desktop_menu_title": "Menu",
   "app_desktop_tools_title": "Tools",
@@ -319,24 +319,24 @@
   "app_onboarding_eula_license": "License agreement (EULA)",
   "app_onboarding_title_configuration": "Configuration",
   "app_onboarding_title_update_info": "MuditaOS update",
-  "app_onboarding_skip_confirm": "<text>Sim setup is required for network connection. Skip the setup anyway? </text>",
-  "app_onboarding_configuration_successful": "<text>Your Pure was configured</text><br></br><text>successfully.</text>",
-  "app_onboarding_no_configuration": "<text>Your Pure is not configured.</text><br></br><text>You can go to Settings to.</text><br></br><text>configure it.</text>",
+  "app_onboarding_skip_confirm": "<text>SIM setup is required for network connection. Skip the setup anyway? </text>",
+  "app_onboarding_configuration_successful": "<text>Your Mudita Pure</text><br></br><text>is ready to use</text>",
+  "app_onboarding_no_configuration": "<text>Your Mudita Pure</text><br></br><text>has not been configured.</text><br></br><text>You can go to Settings</text><br></br><text>to set it up.</text>",
   "app_onboarding_update_info": "<text>New Mudita OS version is available.</text><br></br><text>To update your Pure Phone, please</text><br></br><text>visit: </text><text font='gt_pressura' weight='bold' size='27'>www.mudita.com/updateos</text><br></br><text>and follow the instructions.</text>",
   "app_settings_title_main": "Settings",
-  "app_settings_title_main_new": "Settings New",
+  "app_settings_title_main_new": "Advanced",
   "app_settings_bt": "Bluetooth",
-  "app_settings_bluetooth_add_device": "Add device",
-  "app_settings_bluetooth_all_devices": "All devices",
-  "app_settings_bluetooth_searching_devices": "Searching devices... \nIt may take a moment.",
+  "app_settings_bluetooth_add_device": "Add a device",
+  "app_settings_bluetooth_all_devices": "My devices",
+  "app_settings_bluetooth_searching_devices": "Searching for devices... \nIt may take a moment.",
   "app_settings_bluetooth_main": "Bluetooth",
   "app_settings_bluetooth_phone_name": "Phone name",
   "app_settings_bluetooth_phone_visibility": "Phone visibility",
   "app_settings_bluetooth_enter_passkey": "Enter passkey:",
   "app_settings_bluetooth_init_error_message": "<text font='gt_pressura' weight='regular' size='27'>Bluetooth initialization process has failed.</text>",
-  "app_settings_bluetooth_pairing_error_message": "<text font='gt_pressura' weight='regular' size='27'>Pairing process has failed.<br></br>Check the device and </text> <text font='gt_pressura' weight='bold' size='27'>TRY AGAIN.</text>",
-  "app_settings_bluetooth_unpairing_error_message": "<text font='gt_pressura' weight='regular' size='27'>Unpairing process has failed.<br></br>Check the device and </text> <text font='gt_pressura' weight='bold' size='27'>TRY AGAIN.</text>",
-  "app_settings_bluetooth_connecting_error_message": "<text font='gt_pressura' weight='regular' size='27'>Connection process has failed.<br></br>Check the device and </text> <text font='gt_pressura' weight='bold' size='27'>TRY AGAIN.</text>",
+  "app_settings_bluetooth_pairing_error_message": "<text font='gt_pressura' weight='regular' size='27'>Pairing Unsuccessful.<br></br>Check the device and </text> <text font='gt_pressura' weight='bold' size='27'>TRY AGAIN.</text>",
+  "app_settings_bluetooth_unpairing_error_message": "<text font='gt_pressura' weight='regular' size='27'>Unpairing Unsuccessful.<br></br>Check the device and </text> <text font='gt_pressura' weight='bold' size='27'>TRY AGAIN.</text>",
+  "app_settings_bluetooth_connecting_error_message": "<text font='gt_pressura' weight='regular' size='27'>Connection Unsuccessful.<br></br>Check the device and </text> <text font='gt_pressura' weight='bold' size='27'>TRY AGAIN.</text>",
   "app_settings_net": "Network",
   "app_settings_disp_key": "Display and keypad",
   "app_settings_display_display_light": "Display light",
@@ -350,14 +350,14 @@
   "app_settings_display_keypad_light_active": "On when active",
   "app_settings_display_keypad_light_off": "Off",
   "app_settings_display_input_language": "Input language",
-  "app_settings_display_locked_screen_autolock": "Autolock",
+  "app_settings_display_locked_screen_autolock": "Auto-Lock",
   "app_settings_display_locked_screen_wallpaper": "Wallpaper",
   "app_settings_display_wallpaper_logo": "Mudita logo",
   "app_settings_display_wallpaper_clock": "Clock",
   "app_settings_display_wallpaper_quotes": "Quotes",
   "app_settings_display_wallpaper_edit_quotes": "Edit quotes",
   "app_settings_display_wallpaper_quotes_options": "Options",
-  "app_settings_display_wallpaper_quotes_edit": "Edit quote",
+  "app_settings_display_wallpaper_quotes_edit": "Edit quotes",
   "app_settings_display_wallpaper_quotes_delete": "Delete quote",
   "app_settings_display_wallpaper_quotes_new": "New quote",
   "app_settings_display_wallpaper_quotes_select": "Select quotes",
@@ -399,7 +399,7 @@
   "app_settings_security": "Security",
   "app_settings_language": "Language",
   "app_settings_factory_reset": "Factory reset",
-  "app_settings_about_your_pure": "About your Pure",
+  "app_settings_about_your_pure": "About Mudita Pure",
   "app_settings_certification": "Certification",
   "app_settings_about": "About Mudita Pure",
   "app_settings_title_languages": "Language selection",
@@ -407,15 +407,15 @@
   "app_settings_language_polish": "Polish",
   "app_settings_language_german": "German",
   "app_settings_language_spanish": "Spanish",
-  "app_settings_network_active_card": "Active card",
-  "app_settings_network_operator_auto_select": "Operator auto-select",
-  "app_settings_network_all_operators": "All operators",
+  "app_settings_network_active_card": "Active SIM card",
+  "app_settings_network_operator_auto_select": "Network auto-select",
+  "app_settings_network_all_operators": "All Operators",
   "app_settings_network_import_contacts_from_sim_card": "Import contacts from SIM card",
   "app_settings_network_sim1": "SIM1",
   "app_settings_network_sim2": "SIM2",
   "app_settings_network_sim_none": "No SIM",
   "app_settings_network_voice_over_lte": "VoLTE (experimental)",
-  "app_settings_network_apn_settings": "APN settings",
+  "app_settings_network_apn_settings": "APN Settings",
   "app_settings_toggle_on": "ON",
   "app_settings_toggle_off": "OFF",
   "app_settings_security_lock_screen_passcode": "Lock screen passcode",
@@ -488,11 +488,11 @@
   "app_phonebook_options_send_bt": "Send via Bluetooth",
   "app_phonebook_options_forward_namecard": "Forward namecard",
   "app_phonebook_options_send_sms": "Send via SMS",
-  "app_phonebook_new_contact_first_name": "First name",
-  "app_phonebook_new_contact_second_name": "Second name",
-  "app_phonebook_new_contact_number": "Number",
-  "app_phonebook_new_contact_second_number": "Second number",
-  "app_phonebook_new_contact_email": "Email",
+  "app_phonebook_new_contact_first_name": "First Name",
+  "app_phonebook_new_contact_second_name": "Last Name",
+  "app_phonebook_new_contact_number": "Mobile",
+  "app_phonebook_new_contact_second_number": "Secondary Number",
+  "app_phonebook_new_contact_email": "E-mail",
   "app_phonebook_new_contact_address": "Address",
   "app_phonebook_new_contact_note": "Note",
   "app_phonebook_new_speed_dial_key": "Speed dial key",
@@ -500,7 +500,7 @@
   "app_phonebook_new_add_to_ice": "Add to ICE",
   "app_phonebook_check": "CHECK",
   "app_phonebook_uncheck": "UNCHECK",
-  "app_meditation_title_main": "Meditation timer",
+  "app_meditation_title_main": "Meditation Timer",
   "app_meditation_preparation_time": "Preparation time",
   "app_meditation_put_down_phone_and_wait": "<text>Put down the phone and wait for<br>the gong.</text>",
   "app_meditation_thank_you_for_session": "<text>Thank you for this<br>meditation session.</text>",
@@ -510,7 +510,7 @@
   "app_meditation_interval_every_x_minutes": "Every %0 minutes",
   "app_meditation_minute": "MINUTE",
   "app_meditation_minutes": "MINUTES",
-  "app_music_player_all_songs": "All songs",
+  "app_music_player_all_songs": "All Songs",
   "app_music_player_play": "PLAY",
   "app_music_player_music_library": "MUSIC LIBRARY",
   "app_music_player_quit": "QUIT",
@@ -533,9 +533,9 @@
   "sms_mark_read": "Mark as read",
   "sms_mark_unread": "Mark as unread",
   "settings_lang_PL": "PL",
-  "settings_lang_ENG": "ENG",
+  "settings_lang_ENG": "EN",
   "settings_lang_DE": "DE",
-  "settings_lang_SP": "SP",
+  "settings_lang_SP": "ES",
   "desktop_powerdown_info1": "Now it is truly...",
   "desktop_powerdown_info2": "Disabled!!!",
   "app_desktop_update": "Update",
