--- a/image/assets/lang/English.json
+++ b/image/assets/lang/English.json
@@ -244,8 +244,8 @@
   "sim_setup_wrong_puk": "<text>Wrong PUK code.<br></br>You have <token>$ATTEMPTS</token> attempts left</text>",
   "sim_setup_wrong_puk_last_attempt": "<text>Wrong PUK code.<br></br>You have 1 attempt left</text>",
   "sim_setup_wrong_puk_last_attempt_warning": "<text>If the code is wrong this time, the<br></br>SIM card will be blocked and you'll<br></br>have to contact the operator.</text>",
-  "sim_card_unlocked": "SIM card pin disabled",
-  "sim_card_locked": "SIM card pin enabled",
+  "sim_card_pin_disabled": "SIM card pin disabled",
+  "sim_card_pin_enabled": "SIM card pin enabled",
   "app_desktop_press_to_unlock": "<text font='gt_pressura' size='27'>Press <b>Unlock</b> and then <b>#</b></text>",
   "app_desktop_unread_messages": "<text>Unread <b>messages</b></text>",
   "app_desktop_missed_calls": "<text>Missed <b>calls</b></text>",
